# bavot_v3

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  RESEARCH.md  a4_vol_backtest.py  a5_daily_trend.py  analyze_candidate.py  analyzer.py  b1_xsect.py  backtest.py  bavot_top.py  collect_futures_data.py  config.py  config.yaml  crontab.txt  daily_trend.py  dashboard.py  digest.py  evaluator.py  funding_carry.py  gates.py  heartbeat.py  indicators.py  lab.py  learn.py  llm_backtest.py  main.py  news_collector.py  news_tagger.py  notify.py  orderflow_collector.py  output.py  pyproject.toml  requirements.txt  stocks_daily_trend.py  storage.py  t1.py  telegram_collector.py  xsect.py
agents/: learn_memory.md  learn_soul.md
fetchers/: __init__.py  base.py  binance.py  ibkr.py
prompts/: a3_crypto_lev.txt  a4_stocks_swing.txt  scalping_a2_fade.txt  scalping_analyst.txt
tests/: test_evaluator.py  test_indicators.py  test_storage.py
